# databricks_cicd_with_gh_action

./: README.md  databricks_job.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: databricks_deploy.yml
src/pyspark_project/: etl_job.py
