[tool.poetry]
name = "pyspark-project"
version = "1.0.0"
description = "Generic PySpark ETL Project for Databricks"
authors = ["Ashutosh Ranghar <ashutosh@example.com>"]
readme = "README.md"
packages = [{ include = "pyspark_project", from ="src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyspark = ">=3.3.0"
delta-spark = ">=2.4.0"
databricks-cli = "^0.205.0"
PyYAML = ">=6.0"
pandas = ">=2.0.0"
numpy = ">=1.23.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-mock = ">=3.10.0"
black = ">=24.0.0"
flake8 = ">=6.0.0"
setuptools = ">=68.0.0"
wheel = ">=0.40.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
